# performax_py

./: CMakeLists.txt  chatgpt.html  setup.py
.github/workflows/: wheels.yml
src/: main.cpp
